Se aprendio sobre los métodos para manipular el DOM, como los eventos

--- a/DOMJS/práctica/elementosPizza/index.html
+++ b/DOMJS/práctica/elementosPizza/index.html
@@ -16,6 +16,7 @@
         <li class="topping fondo-marron" id="albahaca">Albahaca</li>
         <li class="topping fondo-naranja">Champiñones</li>
       </ul>
+      <a href="https://www.freecodecamp.org/espanol/">freeCodeCamp</a>
     </div>
     <script src="main.js"></script>
   </body>
