--- a/DOMJS/proyectoTodoList/index.html
+++ b/DOMJS/proyectoTodoList/index.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/png" href="imagenes/favicon.png">
 </head>
@@ -17,12 +18,15 @@
     <div class="contenedor-principal">
       <h1>Mis Tareas</h1>
       <div class="contenedor-interno">
-        <input id="ingresa-tarea" type="text">
-        <button id="crea-tarea">Crear Tarea</button>
+        <input id="ingresa-tarea" type="text" placeholder="Ingresa una Tarea">
+        <button type="submit" id="crea-tarea">Crear Tarea</button>
+        <div id="lista-tareas">
+          <!--Tareas-->
+        </div>
       </div>
     </div>
   </main>
-</body>
-<script src="main.js"></script>
 
+  <script src="main.js"></script>
+</body>
 </html>
